# wgpu

./: .gitignore  Cargo.toml  links
pkg/: wgpu_rust.js  wgpu_rust_bg.js  wgpu_rust_bg.wasm
src/: lib.rs  main.rs
tutorial10_lighting/: Cargo.toml  build.rs  index.html  server.py
tutorial10_lighting/src/: lib.rs  light.wgsl  main.rs  model.rs  phong.frag  resources.rs  shader.wgsl  texture.rs
tutorial1_window/pkg/: package.json  wgpu_rust_bg.wasm.d.ts
tutorial1_window/src/: main.rs
tutorial2_suface/: Cargo.toml
tutorial2_suface/src/: lib.rs  main.rs
tutorial2_surface/: Cargo.toml
tutorial2_surface/src/: lib.rs
tutorial3_pipeline/: Cargo.toml
tutorial3_pipeline/src/: challenge.frag  challenge.rs  challenge.vert  challenge.wgsl  lib.rs  shader.frag  shader.vert  shader.wgsl
tutorial4_buffer/: Cargo.toml
tutorial4_buffer/src/: challenge.rs  lib.rs  main.rs  shader.frag  shader.vert  shader.wgsl
tutorial5_textures/: Cargo.toml
tutorial5_textures/src/: challenge.rs  lib.rs  main.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
tutorial6_uniforms/: Cargo.toml  lib.rs
tutorial6_uniforms/src/: challenge.rs  lib.rs  main.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
tutorial7_instances/: Cargo.toml
tutorial7_instances/src/: challenge.rs  lib.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
tutorial8_depth/: Cargo.toml  challenge.vert
tutorial8_depth/src/: challenge.frag  challenge.rs  challenge.wgsl  lib.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
tutorial9_models/: Cargo.toml  build.rs
tutorial9_models/src/: lib.rs  main.rs  model.rs  resource.rs  shader.frag  shader.vert  shader.wgsl  texture.rs
