[package]
name = "wgpu-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
env_logger = "0.10.1"
log = "0.4.20"
wgpu = "0.18.0"
winit = "0.29.4"

[taget.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.8"
console_log = "0.1.3"
wgpu = { version = "0.18.0", features = ["webgl"] }
wasm-bindgen = "0.2.76"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.50", features = [
    "Document",
    "Window",
    "Element",
    ] }

[lib]
crate-type = ["cdylib", "rlib"]
