[package]
name = "tutorial5_textures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
bytemuck = "1.15.0"
cfg-if = "1.0.0"
env_logger = "0.11.3"
log = "0.4.21"
pollster = "0.3.0"
wgpu = "0.18"
winit = "0.28"


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial5-textures"
path = "src/main.rs"

[[bin]]
name = "tutorial5-challenge"
path = "src/challenge.rs"
