[package]
name = "tutorial6_uniforms"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.15.0"
cfg-if = "1.0.0"
cgmath = "0.18.0"
env_logger = "0.11.3"
pollster = "0.3.0"
wgpu = "0.19.4"
winit = "0.29.15"
