[package]
name = "tutorial8_depth"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.12", features = ["derive"]}
cfg-if = "1"
cgmath = "0.18"
pollster = "0.3"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
winit = "0.28"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"
wgpu = { version = "0.18", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "Document",
  "Window",
  "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "tutorial8_depth"
path = "src/main.rs"

[[bin]]
name = "tutorial8_depth_challenge"
path = "src/challenge.rs"
